k8s/account-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: digital-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
        - name: account-service
          image: digital-banking-platform-account-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: digital-bank
spec:
  type: ClusterIP
  selector:
    app: account-service
  ports:
    - name: http
      port: 4002
      targetPort: 4002
