k8s/admin-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-frontend
  namespace: digital-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-frontend
  template:
    metadata:
      labels:
        app: admin-frontend
    spec:
      containers:
        - name: admin-frontend
          image: digital-bank-admin-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-frontend
  namespace: digital-bank
spec:
  selector:
    app: admin-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
