k8s/auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: digital-bank
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: http
      port: 4001        # inside cluster
      targetPort: 4001  # container port

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: digital-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: savindugunasekara/digital-bank-auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
          readinessProbe:
            httpGet:
              path: /health
              port: 4001
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 4001
            initialDelaySeconds: 30
            periodSeconds: 20
