k8s/backend-services.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: digital-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
        - name: account-service
          image: digital-banking-platform-account-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: digital-bank
spec:
  selector:
    app: account-service
  ports:
    - port: 4002
      targetPort: 4002
      protocol: TCP
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-service
  namespace: digital-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-service
  template:
    metadata:
      labels:
        app: fraud-service
    spec:
      containers:
        - name: fraud-service
          image: digital-banking-platform-fraud-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-service
  namespace: digital-bank
spec:
  selector:
    app: fraud-service
  ports:
    - port: 4004
      targetPort: 4004
      protocol: TCP
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: digital-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: digital-banking-platform-notification-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: digital-bank
spec:
  selector:
    app: notification-service
  ports:
    - port: 4005
      targetPort: 4005
      protocol: TCP
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: digital-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
        - name: transaction-service
          image: digital-banking-platform-transaction-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: digital-bank
spec:
  selector:
    app: transaction-service
  ports:
    - port: 4003
      targetPort: 4003
      protocol: TCP
  type: ClusterIP
