k8s/customer-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-frontend
  namespace: digital-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-frontend
  template:
    metadata:
      labels:
        app: customer-frontend
    spec:
      containers:
        - name: customer-frontend
          image: savindugunasekara/digital-bank-customer-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: customer-frontend
  namespace: digital-bank
spec:
  selector:
    app: customer-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
