k8s/fraud-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-service
  namespace: digital-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-service
  template:
    metadata:
      labels:
        app: fraud-service
    spec:
      containers:
        - name: fraud-service
          image: digital-banking-platform-fraud-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-service
  namespace: digital-bank
spec:
  type: ClusterIP
  selector:
    app: fraud-service
  ports:
    - name: http
      port: 4004
      targetPort: 4004
