k8s/notification-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: digital-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: savindugunasekara/digital-bank-notification-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: digital-bank
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - name: http
      port: 4005
      targetPort: 4005
