k8s/transaction-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: digital-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
        - name: transaction-service
          image: digital-banking-platform-transaction-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: digital-bank
spec:
  type: ClusterIP
  selector:
    app: transaction-service
  ports:
    - name: http
      port: 4003
      targetPort: 4003
