k8s/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digital-bank-api
  namespace: digital-bank
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          # CUSTOMER-FACING APIs
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 4001

          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 4002

          - path: /transactions
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 4003

          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 4005

          # 🔹 ADMIN APIs
          - path: /admin/users
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 4001

          - path: /admin/accounts
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 4002

          - path: /admin/transactions
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 4003
