k8s/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digital-bank-frontend
  namespace: digital-bank
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    # Customer app
    - host: customer.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-frontend
                port:
                  number: 80

    # Admin app
    - host: admin.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-frontend
                port:
                  number: 80
